PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Fix: Several EDTS commands were not autoloaded by EDTS code.  PEL code now
  autoloads them when EDTS is requested.  This includes the EDTS debug, eunit
  and dialyzer commands.
- Modified: key bindings to toggle EDTS: it was bound to ~<f12> M-E~ (or its
  equivalent ~<M-f12> M-E~).  It is now bound to ~<f12> M-E M-E~ (and its
  equivalent and easier to type ~<M-f12> M-E M-E~).
- Modified: key bindings for other EDTS commands, which are now in the
  ~<f12> M-E~ key prefix: *edts-buffer-node-name*, *edts-api-start-server*,
  *edts-shell*.
- Improved:  [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-erlang.pdf][𝕻𝔩 - Erlang PDF]] by moving EDTS-specific commands related to
  Erlang shell and help inside their topic specific area of the file instead
  of leaving them inside the EDTS-specific area.  Also added information on
  limitations of some of the help commands.
- Fix: activation of *flyspell-prog-mode*: the old code was invoking the
  flyspell-prog-mode with 1 argument but the function takes none.
  - Key binding conflict between flyspell and iedit is now done by a function
    stored inside the pel-ispell-iedit.el as opposed to being inside
    the pel_keys.el file.
- Improved: support for *flyspell-mode* and *flyspell-prog-mode*:
  - Add ability to prevent automatic activation of flyspell-mode and
    flyspell-prog-mode: the *pel-spell-prevent-flyspell* user-option can be
    set to prevent activation of the automatic spell checking.  This is useful
    if someone wants to reduce CPU load and also when debugging the spell
    checking mechanism when you don't want automatic activation of the modes
    when opening a new buffer.
  - The *pel-spell-show-use* now display whether flyspell-prog-mode is active.
    It also shows whether the flyspell-mode and flyspell-prog-mode automatic